--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UFT-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,11 +24,11 @@
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span class="logo-color">Web</span>Studio</a>
           <ul class="top-list">
-            <li class="top-line-box"><a href="./index.html" class="top-line">Студія</a></li>
+            <li class="top-line-box"><a href="./index.html" class="top-line">Студия</a></li>
             <li class="top-line-box">
-              <a href="./portfolio.html" class="top-line active">Портфоліо</a>
+              <a href="./portfolio.html" class="top-line active line">Портфолио</a>
             </li>
-            <li class="top-line-box"><a href="" class="top-line">Контакти</a></li>
+            <li class="top-line-box"><a href="" class="top-line">Контакты</a></li>
           </ul>
         </nav>
         <ul class="top-list-info">
@@ -75,7 +75,16 @@
           <ul class="portfolio-box-list">
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img.jpg" alt="ноутбук" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img.jpg" alt="ноутбук" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Технокряк</h2>
                   <p class="secondary-tex">Веб-сайт</p>
