--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,16 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (1).jpg" alt="Постер" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (1).jpg" alt="Постер" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Постер New Orlean vs Golden Star</h2>
                   <p class="secondary-tex">Дизайн</p>
@@ -102,7 +111,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (2).jpg" alt="логотип" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (2).jpg" alt="логотип" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Ресторан Seafood</h2>
                   <p class="secondary-tex">Приложение</p>
@@ -111,7 +130,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (3).jpg" alt="наушники" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (3).jpg" alt="наушники" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Проект Prime</h2>
                   <p class="secondary-tex">Маркетинг</p>
@@ -120,7 +149,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (4).jpg" alt="коробки" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (4).jpg" alt="коробки" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Проект Boxes</h2>
                   <p class="secondary-tex">Приложение</p>
@@ -129,7 +168,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (5).jpg" alt="екран" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (5).jpg" alt="екран" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Inspiration has no Borders</h2>
                   <p class="secondary-tex">Веб-сайт</p>
@@ -138,7 +187,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (6).jpg" alt="журнал" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (6).jpg" alt="журнал" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Издание Limited Edition</h2>
                   <p class="secondary-tex">Дизайн</p>
@@ -147,7 +206,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (7).jpg" alt="бирка" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (7).jpg" alt="бирка" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Проект LAB</h2>
                   <p class="secondary-tex">Маркетинг</p>
@@ -156,7 +225,17 @@
             </li>
             <li class="portfolio-box">
               <a class="portfolio-box-link" href="">
-                <img src="./images/portfolio/img (8).jpg" alt="ноутбук" width="370" />
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/img (8).jpg" alt="ноутбук" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-box-content">
                   <h2 class="box-title-text">Growing Business</h2>
                   <p class="secondary-tex">Приложение</p>
